@@ -10,6 +10,7 @@ Version 2.31.1
 The following bugs are resolved with this release:
   [19519] iconv(1) with -c option hangs on illegal multi-byte sequences
     (CVE-2016-10228)
+  [20019] NULL pointer dereference in libc.so.6 IFUNC due to uninitialized GOT
   [20543] Please move from .gnu.linkonce to comdat
   [23296] Data race in setting function descriptor during lazy binding
   [24973] iconv encounters segmentation fault when converting 0x00 0xfe in
